--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,9 @@
       </div>
     </header>
     <main>
-      <section class="collection">
-        <h1 class="invisibility">Collection</h1>
-        <ul class="list">
+      <section class="collection container">
+        <h1 class="visually-hidden">Collection</h1>
+        <ul class="list btn-port">
           <li>
             <button class="button-port current" type="button">Усі</button>
           </li>
@@ -64,7 +64,7 @@
             <button class="button-port" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul class="list">
+        <ul class="list list-collection">
           <li>
             <a class="decoration-link" href="">
               <img src="./images/laptop.jpg" alt="Ноутбук" width="370" height="294" />
@@ -137,33 +137,35 @@
       </section>
     </main>
     <footer>
-      <address class="bg-footer">
-        <ul class="list">
-          <li>
-            <a class="logo decoration-link" href=""
-              ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
-            >
-          </li>
-          <li>
-            <a
-              class="adress-footer link decoration-link"
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"
-              target="_blank"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="mail-footer link decoration-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="mail-footer link decoration-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="bg-footer">
+        <address class="container">
+          <ul class="list footer">
+            <li>
+              <a class="logo decoration-link logo-footer" href=""
+                ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
+              >
+            </li>
+            <li>
+              <a
+                class="adress-footer link decoration-link"
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"
+                target="_blank"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="mail-footer link decoration-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="tel-footer link decoration-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
