--- a/portfolio.html
+++ b/portfolio.html
@@ -15,24 +15,26 @@
   </head>
   <body>
     <header>
-      <nav class="container">
-        <ul class="list site-nav">
-          <li>
-            <a class="logo decoration-link" href="./index.html"
-              ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
-            >
-          </li>
-          <li>
-            <a class="link decoration-link" href="./index.html">Студія</a>
-          </li>
-          <li>
-            <a class="link current decoration-link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li><a class="link decoration-link" href="">Контакти</a></li>
-        </ul>
-      </nav>
-      <div class="container">
-        <ul class="list">
+      <div class="container container-head">
+        <nav>
+          <ul class="list site-nav head-list">
+            <li>
+              <a class="decoration-link logo" href="./index.html"
+                ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
+              >
+            </li>
+            <li>
+              <a class="link decoration-link" href="./index.html">Студія</a>
+            </li>
+            <li>
+              <a class="link decoration-link link-porf current" href="./portfolio.html"
+                >Портфоліо</a
+              >
+            </li>
+            <li><a class="decoration-link link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="list head-list">
           <li>
             <a class="link mail-link decoration-link" href="mailto:info@devstuio.com"
               >info@devstudio.com</a
