--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </header>
     <main>
-      <div class="container">
+      <div class="container bg-service">
         <section class="block-service">
           <h1 class="titel-service">
             Ефективні рішення для<br />
