--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
         <section>
           <h2 class="title">Наша команда</h2>
           <ul class="list">
-            <li>
+            <li class="one-of-team">
               <img src="./images/igor-demyanenko.jpg" alt="igor-demyanenko" width="270" />
               <h3 class="title-name">Ігор Дем'яненко</h3>
               <p class="text">Product Designer</p>
             </li>
-            <li>
+            <li class="one-of-team">
               <img src="./images/olga-repina.jpg" alt="olga-repina" width="270" />
               <h3 class="title-name">Ольга Рєпіна</h3>
               <p class="text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="one-of-team">
               <img src="./images/mykola-tarasov.jpg" alt="mykola-tarasov" width="270" />
               <h3 class="title-name">Микола Тарасов</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="one-of-team">
               <img src="./images/mihaylo-ermakov.jpg" alt="mihaylo-ermakov" width="270" />
               <h3 class="title-name">Михайло Єрмаков</h3>
               <p class="text">UI Designer</p>
