--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
           </li>
         </ul>
         <ul class="list list-collection">
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/laptop.jpg" alt="Ноутбук" width="370" height="294" />
               <h2 class="title-collection">Технокряк</h2>
