--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
       <div class="container container-head">
         <nav>
           <ul class="list site-nav head-list">
-            <li>
+            <li class="link-head">
               <a class="decoration-link logo" href="./index.html"
                 ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
               >
             </li>
-            <li>
+            <li class="link-head">
               <a class="link current decoration-link" href="./index.html">Студія</a>
             </li>
-            <li>
-              <a class="link decoration-link link-porf" href="./portfolio.html">Портфоліо</a>
+            <li class="link-head">
+              <a class="link decoration-link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li><a class="decoration-link link" href="">Контакти</a></li>
+            <li class="link-head"><a class="decoration-link link" href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="list head-list">
-          <li>
+          <li class="mail">
             <a class="link mail-link decoration-link" href="mailto:info@devstuio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="mail">
             <a class="link tel-link decoration-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -141,12 +141,12 @@
       <div class="bg-footer">
         <address class="container">
           <ul class="list footer">
-            <li>
+            <li class="mail">
               <a class="logo decoration-link logo-footer" href=""
                 ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
               >
             </li>
-            <li>
+            <li class="mail">
               <a
                 class="adress-footer link decoration-link"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"
@@ -154,12 +154,12 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="mail">
               <a class="mail-footer link decoration-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="mail">
               <a class="tel-footer link decoration-link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
