--- a/portfolio.html
+++ b/portfolio.html
@@ -18,29 +18,27 @@
       <div class="container container-head">
         <nav>
           <ul class="list site-nav head-list">
-            <li>
+            <li class="link-head">
               <a class="decoration-link logo" href="./index.html"
                 ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
               >
             </li>
-            <li>
+            <li class="link-head">
               <a class="link decoration-link" href="./index.html">Студія</a>
             </li>
-            <li>
-              <a class="link decoration-link link-porf current" href="./portfolio.html"
-                >Портфоліо</a
-              >
+            <li class="link-head">
+              <a class="link decoration-link current" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li><a class="decoration-link link" href="">Контакти</a></li>
+            <li class="link-head"><a class="decoration-link link" href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="list head-list">
-          <li>
+          <li class="mail">
             <a class="link mail-link decoration-link" href="mailto:info@devstuio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="mail">
             <a class="link tel-link decoration-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -50,19 +48,19 @@
       <section class="collection container">
         <h1 class="visually-hidden">Collection</h1>
         <ul class="list btn-port">
-          <li>
+          <li class="list-btn">
             <button class="button-port current" type="button">Усі</button>
           </li>
-          <li>
+          <li class="list-btn">
             <button class="button-port" type="button">Веб-сайти</button>
           </li>
-          <li>
+          <li class="list-btn">
             <button class="button-port" type="button">Додатки</button>
           </li>
-          <li>
+          <li class="list-btn">
             <button class="button-port" type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="list-btn">
             <button class="button-port" type="button">Маркетинг</button>
           </li>
         </ul>
@@ -74,56 +72,56 @@
               <p class="text-collection">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/basketball.jpg" alt="Баскетбол" width="370" height="294" />
               <h2 class="title-collection">Постер New Orlean vs Golden Star</h2>
               <p class="text-collection">Дизайн</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/fish.jpg" alt="Риба" width="370" height="294" />
               <h2 class="title-collection">Ресторан Seafood</h2>
               <p class="text-collection">Додаток</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/headphone.jpg" alt="Навушники" width="370" height="294" />
               <h2 class="title-collection">Проєкт Prime</h2>
               <p class="text-collection">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/box.jpg" alt="Коробки" width="370" height="294" />
               <h2 class="title-collection">Проєкт Boxes</h2>
               <p class="text-collection">Додаток</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/computer.jpg" alt="Компьютер" width="370" height="294" />
               <h2 class="title-collection">Inspiration has no Borders</h2>
               <p class="text-collection">Веб-сайт</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/book.jpg" alt="Книга" width="370" height="294" />
               <h2 class="title-collection">Видання Limited Edition</h2>
               <p class="text-collection">Дизайн</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img src="./images/label.jpg" alt="Лейба" width="370" height="294" />
               <h2 class="title-collection">Проєкт LAB</h2>
               <p class="text-collection">Маркетинг</p>
             </a>
           </li>
-          <li>
+          <li class="link-collection">
             <a class="decoration-link" href="">
               <img
                 src="./images/laptop-print.jpg"
@@ -142,12 +140,12 @@
       <div class="bg-footer">
         <address class="container">
           <ul class="list footer">
-            <li>
+            <li class="mail">
               <a class="logo decoration-link logo-footer" href=""
                 ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
               >
             </li>
-            <li>
+            <li class="mail">
               <a
                 class="adress-footer link decoration-link"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"
@@ -155,12 +153,12 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="mail">
               <a class="mail-footer link decoration-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="mail">
               <a class="tel-footer link decoration-link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
