--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@
         </section>
       </div>
     </main>
-    <footer>
-      <div class="bg-footer">
-        <address class="container">
+    <footer class="bg-footer container">      
+      <address>
           <ul class="list footer">
             <li class="mail">
               <a class="logo decoration-link logo-footer" href=""
@@ -165,8 +164,7 @@
               >
             </li>
           </ul>
-        </address>
-      </div>
+      </address>      
     </footer>
   </body>
 </html>
