--- a/portfolio.html
+++ b/portfolio.html
@@ -137,8 +137,8 @@
       </section>
     </main>
     <footer>
-      <div class="bg-footer">
-        <address class="container">
+      <div class="bg-footer container">
+        <address>
           <ul class="list footer">
             <li class="mail">
               <a class="logo decoration-link logo-footer" href=""
