--- a/portfolio.html
+++ b/portfolio.html
@@ -136,9 +136,8 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <div class="bg-footer container">
-        <address>
+    <footer class="bg-footer container">      
+      <address>
           <ul class="list footer">
             <li class="mail">
               <a class="logo decoration-link logo-footer" href=""
@@ -164,8 +163,7 @@
               >
             </li>
           </ul>
-        </address>
-      </div>
+      </address>      
     </footer>
   </body>
 </html>
