--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="border-head">
       <div class="container container-head">
         <nav>
           <ul class="list site-nav head-list">
@@ -45,18 +45,17 @@
       </div>
     </header>
     <main>
-      <div class="container bg-service">
-        <section class="block-service">
+      <section class="container bg-service">
+        <div class="block-service">
           <h1 class="titel-service">
             Ефективні рішення для<br />
             вашого бізнесу
           </h1>
           <button class="button" type="button">Замовити послугу</button>
-        </section>
-      </div>
-      <div class="container">
-        <section>
-          <h2 class="title-features visually-hidden">Features</h2>
+        </div>
+      </section>      
+      <section class="container title-features">
+          <h2 class="visually-hidden">Features</h2>
           <ul class="list features">
             <li>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -81,10 +80,9 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="work">
+      </section>      
+      <section class="work">
+        <div class="container">
           <h2 class="title">Чим ми займаємося</h2>
           <ul class="list">
             <li>
@@ -107,64 +105,62 @@
               <img src="./images/color-palette.jpg" alt="design" width="370" height="294" />
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container team">
-        <section>
-          <h2 class="title">Наша команда</h2>
-          <ul class="list">
-            <li class="one-of-team">
-              <img src="./images/igor-demyanenko.jpg" alt="igor-demyanenko" width="270" />
-              <h3 class="title-name">Ігор Дем'яненко</h3>
-              <p class="text">Product Designer</p>
-            </li>
-            <li class="one-of-team">
-              <img src="./images/olga-repina.jpg" alt="olga-repina" width="270" />
-              <h3 class="title-name">Ольга Рєпіна</h3>
-              <p class="text">Frontend Developer</p>
-            </li>
-            <li class="one-of-team">
-              <img src="./images/mykola-tarasov.jpg" alt="mykola-tarasov" width="270" />
-              <h3 class="title-name">Микола Тарасов</h3>
-              <p class="text">Marketing</p>
-            </li>
-            <li class="one-of-team">
-              <img src="./images/mihaylo-ermakov.jpg" alt="mihaylo-ermakov" width="270" />
-              <h3 class="title-name">Михайло Єрмаков</h3>
-              <p class="text">UI Designer</p>
-            </li>
-          </ul>
-        </section>
-      </div>
+        </div>
+      </section>
+      <section class="container team">
+        <h2 class="title">Наша команда</h2>
+        <ul class="list">
+          <li class="one-of-team">
+            <img src="./images/igor-demyanenko.jpg" alt="igor-demyanenko" width="270" />
+            <h3 class="title-name">Ігор Дем'яненко</h3>
+            <p class="text">Product Designer</p>
+          </li>
+          <li class="one-of-team">
+            <img src="./images/olga-repina.jpg" alt="olga-repina" width="270" />
+            <h3 class="title-name">Ольга Рєпіна</h3>
+            <p class="text">Frontend Developer</p>
+          </li>
+          <li class="one-of-team">
+            <img src="./images/mykola-tarasov.jpg" alt="mykola-tarasov" width="270" />
+            <h3 class="title-name">Микола Тарасов</h3>
+            <p class="text">Marketing</p>
+          </li>
+          <li class="one-of-team">
+            <img src="./images/mihaylo-ermakov.jpg" alt="mihaylo-ermakov" width="270" />
+            <h3 class="title-name">Михайло Єрмаков</h3>
+            <p class="text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer class="bg-footer container">      
+    <footer class="bg-footer container">
       <address>
-          <ul class="list footer">
-            <li class="mail">
-              <a class="logo decoration-link logo-footer" href=""
-                ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
-              >
-            </li>
-            <li class="mail">
-              <a
-                class="adress-footer link decoration-link"
-                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"
-                target="_blank"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="mail">
-              <a class="mail-footer link decoration-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="mail">
-              <a class="tel-footer link decoration-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-      </address>      
+        <ul class="list footer">
+          <li class="mail">
+            <a class="logo decoration-link logo-footer" href=""
+              ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
+            >
+          </li>
+          <li class="mail">
+            <a
+              class="adress-footer link decoration-link"
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv"
+              target="_blank"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li class="mail">
+            <a class="mail-footer link decoration-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="mail">
+            <a class="tel-footer link decoration-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
