--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,13 @@
         <ul class="list list-collection">
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/laptop.jpg" alt="Ноутбук" width="370" height="294" />            
+              <img
+                class="img-collection"
+                src="./images/laptop.jpg"
+                alt="Ноутбук"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -76,7 +82,13 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/basketball.jpg" alt="Баскетбол" width="370" height="294" />
+              <img
+                class="img-collection"
+                src="./images/basketball.jpg"
+                alt="Баскетбол"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -85,7 +97,13 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/fish.jpg" alt="Риба" width="370" height="294" />
+              <img
+                class="img-collection"
+                src="./images/fish.jpg"
+                alt="Риба"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -94,7 +112,13 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/headphone.jpg" alt="Навушники" width="370" height="294" />
+              <img
+                class="img-collection"
+                src="./images/headphone.jpg"
+                alt="Навушники"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -103,7 +127,13 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/box.jpg" alt="Коробки" width="370" height="294" />
+              <img
+                class="img-collection"
+                src="./images/box.jpg"
+                alt="Коробки"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -112,7 +142,13 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/computer.jpg" alt="Компьютер" width="370" height="294" />
+              <img
+                class="img-collection"
+                src="./images/computer.jpg"
+                alt="Компьютер"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -121,7 +157,13 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/book.jpg" alt="Книга" width="370" height="294" />
+              <img
+                class="img-collection"
+                src="./images/book.jpg"
+                alt="Книга"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -130,7 +172,13 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection" src="./images/label.jpg" alt="Лейба" width="370" height="294" />
+              <img
+                class="img-collection"
+                src="./images/label.jpg"
+                alt="Лейба"
+                width="370"
+                height="294"
+              />
               <div class="border-col">
                 <h2 class="title-collection">Технокряк</h2>
                 <p class="text-collection">Веб-сайт</p>
@@ -139,7 +187,8 @@
           </li>
           <li class="link-collection">
             <a class="decoration-link" href="">
-              <img class="img-collection"
+              <img
+                class="img-collection"
                 src="./images/laptop-print.jpg"
                 alt="Ноутбук друкують"
                 width="370"
