--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
               >
             </li>
             <li class="link-head">
-              <a class="link decoration-link" href="./index.html">Студія</a>
+              <a class="link decoration-link current" href="./index.html">Студія</a>
             </li>
             <li class="link-head">
-              <a class="link decoration-link current" href="./portfolio.html">Портфоліо</a>
+              <a class="link decoration-link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="link-head">
               <a class="decoration-link link" href="">Контакти</a>
