--- a/portfolio.html
+++ b/portfolio.html
@@ -209,13 +209,11 @@
     </main>
     <footer class="bg-footer">
       <div class="container">
-        <address>
-          <ul class="list footer">
-            <li class="mail">
-              <a class="logo decoration-link logo-footer" href=""
+        <a class="decoration-link logo-footer" href=""
                 ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
               >
-            </li>
+        <address>
+          <ul class="list footer">           
             <li class="mail">
               <a
                 class="adress-footer link decoration-link"
